--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "css-loader": "^3.0.0",
     "express": "^4.17.1",
     "konva": "^3.3.3",
     "mongoose": "^5.5.14",
